syntax = "proto2";

package agreement;

import "v1/agreement/agreement.proto";

message AgreementAddedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementActivatedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementSuspendedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementDeactivatedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementUpdatedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementDeletedV1 {
  required string agreementId = 1;
}

message VerifiedAttributeUpdatedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementConsumerDocumentAddedV1 {
  required string agreementId = 1;
  required AgreementDocumentV1 document = 2;
}

message AgreementConsumerDocumentRemovedV1 {
  required string agreementId = 1;
  required string documentId = 2;
}

message AgreementContractAddedV1 {
  required string agreementId = 1;
  required AgreementDocumentV1 contract = 2;
}
